--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Oxnoob",
-  "description": "I'm Oxnoob, a bot to have FULL Roblox integration!",
+  "name": "Test",
+  "description": "Test",
   "version": "0.0.0",
   "main": "oxnoob.js",
   "scripts": {
@@ -8,4 +8,5 @@
   },
   "dependencies": {
     "discord.js": "11.1.0"
-  }, }
+  },
+}
